# protocol

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Findcatch.cmake  Findcore.cmake  Findnetwork.cmake  Findrunloop.cmake  configuration.cmake
source/corvusoft/protocol/: frame.hpp  frame_builder.hpp  http.cpp  http.hpp  http_frame.cpp  http_frame.hpp  http_frame_builder.cpp  http_frame_builder.hpp  http_message.cpp  http_message.hpp  http_status.hpp  message.cpp  message.hpp  protocol.hpp
source/corvusoft/protocol/detail/: http_frame_builder_impl.hpp  http_impl.hpp  message_impl.hpp
test/acceptance/: CMakeLists.txt
test/acceptance/source/: accept_http_request.cpp  accept_http_response.cpp  compose_http_request.cpp  compose_http_response.cpp  mock_adaptor.hpp  parse_http_request.cpp  parse_http_response.cpp
test/feature/: CMakeLists.txt
test/feature/source/: compose_http_request.cpp  compose_http_response.cpp  parse_http_response.cpp
test/integration/: CMakeLists.txt
test/integration/source/: parse.cpp
test/integration/source/http/: compose.cpp  mock_adaptor.hpp  parse.cpp
test/integration/source/http_frame/: accessors.cpp  is_request.cpp  is_response.cpp
test/integration/source/http_frame_builder/: assemble.cpp  disassemble.cpp  is_finalised.cpp  is_malformed.cpp
test/integration/source/message/: clear.cpp  erase.cpp  get.cpp  get_names.cpp  has.cpp
test/unit/: CMakeLists.txt
test/unit/source/: accept.cpp  destructor.cpp  get_key.cpp  setup.cpp  teardown.cpp
test/unit/source/http/: constructor.cpp  get_key.cpp  get_name.cpp
test/unit/source/http_frame/: constructor.cpp  destructor.cpp  getters.cpp  is_request.cpp  is_response.cpp  setters.cpp
test/unit/source/http_frame_builder/: constructor.cpp  destructor.cpp  is_finalised.cpp  is_malformed.cpp
test/unit/source/http_status/: is_client_error.cpp  is_informational.cpp  is_redirectional.cpp  is_server_error.cpp  is_successful.cpp  make_status_code.cpp  make_status_message.cpp
test/unit/source/message/: clear.cpp  constructor.cpp  destructor.cpp  erase.cpp  get.cpp  get_names.cpp  has.cpp  set.cpp
tool/cppcheck/: options
tool/cppclean/: options
